.metadata/.plugins/org.eclipse.cdt.ui/RTC_F446.build.log
22:07:36 **** Incremental Build of configuration Debug for project RTC_F446 ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'RTC_SendTime':
../Core/Src/main.c:93:9: warning: implicit declaration of function 'HAL_UART_Transmit' [-Wimplicit-function-declaration]
   93 |     if (HAL_UART_Transmit(&huart1, (uint8_t*)buffer, strlen(buffer), HAL_MAX_DELAY) != HAL_OK)
      |         ^~~~~~~~~~~~~~~~~
../Core/Src/main.c:93:28: error: 'huart1' undeclared (first use in this function)
   93 |     if (HAL_UART_Transmit(&huart1, (uint8_t*)buffer, strlen(buffer), HAL_MAX_DELAY) != HAL_OK)
      |                            ^~~~~~
../Core/Src/main.c:93:28: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:93:54: warning: implicit declaration of function 'strlen' [-Wimplicit-function-declaration]
   93 |     if (HAL_UART_Transmit(&huart1, (uint8_t*)buffer, strlen(buffer), HAL_MAX_DELAY) != HAL_OK)
      |                                                      ^~~~~~
../Core/Src/main.c:26:1: note: include '<string.h>' or provide a declaration of 'strlen'
   25 | #include "stdio.h"
  +++ |+#include <string.h>
   26 | /* USER CODE END Includes */
../Core/Src/main.c:93:54: warning: incompatible implicit declaration of built-in function 'strlen' [-Wbuiltin-declaration-mismatch]
   93 |     if (HAL_UART_Transmit(&huart1, (uint8_t*)buffer, strlen(buffer), HAL_MAX_DELAY) != HAL_OK)
      |                                                      ^~~~~~
../Core/Src/main.c:93:54: note: include '<string.h>' or provide a declaration of 'strlen'
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:116:11: warning: implicit declaration of function 'MX_USART2_UART_Init' [-Wimplicit-function-declaration]
  116 |           MX_USART2_UART_Init();  // UART2 initialization (modify if needed)
      |           ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:121:13: warning: implicit declaration of function 'Send_Time_Over_UART' [-Wimplicit-function-declaration]
  121 |             Send_Time_Over_UART();  // Send the time over UART periodically
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c: In function 'MX_RTC_Init':
../Core/Src/main.c:228:20: warning: unused variable 'sAlarm' [-Wunused-variable]
  228 |   RTC_AlarmTypeDef sAlarm = {0};
      |                    ^~~~~~
../Core/Src/main.c:227:19: warning: unused variable 'sDate' [-Wunused-variable]
  227 |   RTC_DateTypeDef sDate = {0};
      |                   ^~~~~
../Core/Src/main.c:226:19: warning: unused variable 'sTime' [-Wunused-variable]
  226 |   RTC_TimeTypeDef sTime = {0};
      |                   ^~~~~
../Core/Src/main.c: At top level:
../Core/Src/main.c:270:6: warning: conflicting types for 'Send_Time_Over_UART'; have 'void(void)'
  270 | void Send_Time_Over_UART(void)
      |      ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:121:13: note: previous implicit declaration of 'Send_Time_Over_UART' with type 'void(void)'
  121 |             Send_Time_Over_UART();  // Send the time over UART periodically
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c: In function 'Send_Time_Over_UART':
../Core/Src/main.c:292:26: error: 'huart2' undeclared (first use in this function)
  292 |   if (HAL_UART_Transmit(&huart2, (uint8_t*)timeString, strlen(timeString), HAL_MAX_DELAY) != HAL_OK)
      |                          ^~~~~~
../Core/Src/main.c:292:56: warning: incompatible implicit declaration of built-in function 'strlen' [-Wbuiltin-declaration-mismatch]
  292 |   if (HAL_UART_Transmit(&huart2, (uint8_t*)timeString, strlen(timeString), HAL_MAX_DELAY) != HAL_OK)
      |                                                        ^~~~~~
../Core/Src/main.c:292:56: note: include '<string.h>' or provide a declaration of 'strlen'
../Core/Src/main.c: At top level:
../Core/Src/main.c:304:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  304 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:186:13: warning: 'MX_I2C1_Init' defined but not used [-Wunused-function]
  186 | static void MX_I2C1_Init(void)
      |             ^~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

22:07:37 Build Failed. 3 errors, 12 warnings. (took 915ms)

